Update uk_ua.json (#832)
- Updated Ukrainian translation

--- a/src/main/resources/assets/modmenu/lang/uk_ua.json
+++ b/src/main/resources/assets/modmenu/lang/uk_ua.json
@@ -1,9 +1,10 @@
 {
-  "category.modmenu.name": "Меню модів",
+  "category.modmenu.name": "Mod Menu",
   "key.modmenu.open_menu": "Відкрити меню модів",
   "modmenu.title": "Моди",
-  "modmenu.nameTranslation.modmenu": "Меню модів",
-  "modmenu.descriptionTranslation.modmenu": "Додає меню для перегляду ваших встановлених модів.",
+  "modmenu.nameTranslation.modmenu": "Mod Menu",
+  "modmenu.descriptionTranslation.modmenu": "Додає меню для перегляду встановлених модів",
+
   "modmenu.loaded": "(Завантажено: %s)",
   "modmenu.loaded.short": "(%s)",
   "modmenu.loaded.69.secret": "(Завантажено: %s... Славно)",
@@ -12,13 +13,16 @@
   "modmenu.mods.1": " (%s мод)",
   "modmenu.mods.69.secret": " (%s модів... Цікаво)",
   "modmenu.mods.420.secret": " (%s модів... Спали їх)",
+
   "modmenu.search": "Пошук модів",
-  "modmenu.searchTerms.library": "Пошук бібліотек",
-  "modmenu.searchTerms.patchwork": "Робота над патчем forge fml",
-  "modmenu.searchTerms.modpack": "набір збірок модів",
-  "modmenu.searchTerms.deprecated": "Застарілий Віджилий Старий",
-  "modmenu.searchTerms.clientside": "Клієнт Гра",
-  "modmenu.searchTerms.configurable": "Конфігурація дозволяє налаштувати різні опції",
+  "modmenu.searchTerms.library": "api бібліотек",
+  "modmenu.searchTerms.patchwork": "робота над патчем forge fml",
+  "modmenu.searchTerms.modpack": "пакетмодів пакет",
+  "modmenu.searchTerms.deprecated": "застарілий віджилий старий",
+  "modmenu.searchTerms.clientside": "сторонаклієнту сторонагри",
+  "modmenu.searchTerms.configurable": "налаштовуване налаштування налаштовує настроювані параметри налаштувань",
+  "modmenu.searchTerms.hasUpdate": "оновлені версії",
+
   "modmenu.toggleFilterOptions": "Фільтри",
   "modmenu.showingMods.n": "Показано %s модів",
   "modmenu.showingMods.1": "Показаний %s мод",
@@ -28,33 +32,41 @@
   "modmenu.showingModsLibraries.n.1": "Показано %s модів і %s бібліотека",
   "modmenu.showingModsLibraries.1.n": "Показаний %s мод і %s бібліотек",
   "modmenu.showingModsLibraries.1.1": "Показаний %s мод і %s бібліотека",
+
   "modmenu.badge.library": "Бібліотека",
   "modmenu.badge.clientsideOnly": "Клієнт",
   "modmenu.badge.deprecated": "Застарілий",
   "modmenu.badge.forge": "Forge",
   "modmenu.badge.modpack": "Збірка модів",
   "modmenu.badge.minecraft": "Minecraft",
+
   "modmenu.dropInfo.line1": "Перетягніть файли у це",
   "modmenu.dropInfo.line2": "вікно, щоб додати моди",
-  "modmenu.dropConfirm": "Скопіювати ці моди у теку модів?",
+  "modmenu.dropConfirm": "Хочете додати наступні моди до Minecraft?",
   "modmenu.dropSuccessful.line1": "Моди скопійовані успішно",
   "modmenu.dropSuccessful.line2": "Щоб моди запрацювали, перезавантажте гру",
-  "modmenu.modIdToolTip": "ID мода: %s",
+
+  "modmenu.modIdToolTip": "ID моду: %s",
   "modmenu.authorPrefix": "Зроблено %s",
   "modmenu.config": "Змінити налаштування",
   "modmenu.configure": "Налаштування...",
-  "modmenu.configure.error": "Не вдалося завантажити екран конфігурації для '%s'\nЗвітуйте до '%s', не до розробника Мод меню",
+  "modmenu.configure.error": "Не вдалося завантажити екран налаштувань %s\nПовідомити в %s, а не в Mod Menu",
   "modmenu.website": "Сайт моду",
   "modmenu.issues": "Повідомити про проблему",
+
   "modmenu.credits": "Автори:",
   "modmenu.viewCredits": "Показати авторів",
   "modmenu.license": "Ліцензія:",
   "modmenu.links": "Посилання:",
   "modmenu.source": "Вихідний код",
-  "modmenu.hasUpdate": "Доступне оновлення:",
-  "modmenu.childHasUpdate": "Дочірній мод має оновлення.",
+  "modmenu.hasUpdate": "Оновлення доступне:",
+  "modmenu.experimental": "(Перевірка оновлень є експериментальною!)",
+  "modmenu.childHasUpdate": "Дочірній мод цього моду має доступне оновлення",
   "modmenu.updateText": "v%s на %s",
-  "modmenu.buymeacoffee": "Купіть розробнику кави",
+  "modmenu.install_version": "Установити версію %s",
+  "modmenu.downloadLink": "Завантажити",
+
+  "modmenu.buymeacoffee": "Buy me a coffee",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
   "modmenu.curseforge": "CurseForge",
@@ -72,40 +84,52 @@
   "modmenu.paypal": "PayPal",
   "modmenu.reddit": "Reddit",
   "modmenu.twitch": "Twitch",
-  "modmenu.twitter": "Twitter",
-  "modmenu.wiki": "Вікі",
+  "modmenu.twitter": "𝕏 (Twitter)",
+  "modmenu.wiki": "Wiki",
   "modmenu.youtube": "YouTube",
+
+  "modmenu.credits.role.author": "Автори",
+  "modmenu.credits.role.contributor": "Дописувачі",
+  "modmenu.credits.role.translator": "Локалізатори",
+  "modmenu.credits.role.maintainer": "Супроводжувачі",
+  "modmenu.credits.role.playtester": "Тестери",
+  "modmenu.credits.role.illustrator": "Ілюстратори",
+  "modmenu.credits.role.owner": "Власники",
+
   "modmenu.modsFolder": "Відкрити теку модів",
   "modmenu.configsFolder": "Відкрити теку налаштувань",
+
   "modmenu.nameTranslation.minecraft": "Minecraft",
-  "modmenu.descriptionTranslation.minecraft": "Базова гра.",
+  "modmenu.descriptionTranslation.minecraft": "Базова гра",
   "modmenu.nameTranslation.java": "Java",
-  "modmenu.descriptionTranslation.java": "Середовище виконання для Java.",
+  "modmenu.descriptionTranslation.java": "Середовище виконання для Java",
   "modmenu.javaDistributionName": "Запуск: %s",
-  "modmenu.options": "Налаштування Mod Меню",
+
+  "modmenu.options": "Налаштування Mod Menu",
   "option.modmenu.sorting": "Сортування",
   "option.modmenu.sorting.ascending": "А-Я",
   "option.modmenu.sorting.descending": "Я-А",
+  "option.modmenu.sorting.has_update": "Оновлення доступне:",
   "option.modmenu.show_libraries": "Бібліотеки",
   "option.modmenu.show_libraries.true": "Показано",
-  "option.modmenu.show_libraries.false": "Сховано",
+  "option.modmenu.show_libraries.false": "Приховано",
   "option.modmenu.hide_config_buttons": "Кнопки налаштувань",
-  "option.modmenu.hide_config_buttons.true": "Сховано",
+  "option.modmenu.hide_config_buttons.true": "Приховано",
   "option.modmenu.hide_config_buttons.false": "Показано",
   "option.modmenu.hide_badges": "Значки модів",
-  "option.modmenu.hide_badges.true": "Сховано",
+  "option.modmenu.hide_badges.true": "Приховано",
   "option.modmenu.hide_badges.false": "Показано",
   "option.modmenu.compact_list": "Перелік",
   "option.modmenu.compact_list.true": "Компактний",
   "option.modmenu.compact_list.false": "Звичайний",
   "option.modmenu.hide_mod_links": "Посилання",
-  "option.modmenu.hide_mod_links.true": "Сховано",
+  "option.modmenu.hide_mod_links.true": "Приховано",
   "option.modmenu.hide_mod_links.false": "Показано",
   "option.modmenu.hide_mod_credits": "Автори",
-  "option.modmenu.hide_mod_credits.true": "Сховано",
+  "option.modmenu.hide_mod_credits.true": "Приховано",
   "option.modmenu.hide_mod_credits.false": "Показано",
   "option.modmenu.hide_mod_license": "Ліцензія",
-  "option.modmenu.hide_mod_license.true": "Сховано",
+  "option.modmenu.hide_mod_license.true": "Приховано",
   "option.modmenu.hide_mod_license.false": "Показано",
   "option.modmenu.count_children": "Дочірні моди",
   "option.modmenu.count_children.true": "Враховуються",
@@ -113,35 +137,46 @@
   "option.modmenu.count_libraries": "Бібліотеки",
   "option.modmenu.count_libraries.true": "Враховуються",
   "option.modmenu.count_libraries.false": "Не враховуються",
-  "option.modmenu.count_hidden_mods": "Сховані моди",
+  "option.modmenu.count_hidden_mods": "Приховані моди",
   "option.modmenu.count_hidden_mods.true": "Враховуються",
   "option.modmenu.count_hidden_mods.false": "Не враховуються",
   "option.modmenu.mod_count_location": "Кількість модів",
   "option.modmenu.mod_count_location.title_screen": "У кутку назви",
   "option.modmenu.mod_count_location.mods_button": "Кнопка",
   "option.modmenu.mod_count_location.title_screen_and_mods_button": "Всюди",
-  "option.modmenu.mod_count_location.none": "Схована",
+  "option.modmenu.mod_count_location.none": "Приховано",
   "option.modmenu.easter_eggs": "Прихованки",
-  "option.modmenu.easter_eggs.true": "Увімкнені",
-  "option.modmenu.easter_eggs.false": "Вимкнені",
+  "option.modmenu.easter_eggs.true": "УВІМК.",
+  "option.modmenu.easter_eggs.false": "ВИМК.",
   "option.modmenu.mods_button_style": "Кнопка",
-  "option.modmenu.mods_button_style.classic": "Під Realms",
-  "option.modmenu.mods_button_style.replace_realms": "Замість Realms",
-  "option.modmenu.mods_button_style.shrink": "Поруч з Realms",
-  "option.modmenu.mods_button_style.icon": "Іконка",
+  "option.modmenu.mods_button_style.classic": "Під «Minecraft Realms»",
+  "option.modmenu.mods_button_style.replace_realms": "Замість «Minecraft Realms»",
+  "option.modmenu.mods_button_style.shrink": "Поруч з «Minecraft Realms»",
+  "option.modmenu.mods_button_style.icon": "Значок",
+  "option.modmenu.game_menu_button_style": "Ігрове меню(пауза)",
+  "option.modmenu.game_menu_button_style.below": "Поруч з «Звітувати помилку»",
+  "option.modmenu.game_menu_button_style.replace": "Замість «Звітувати помилку»",
+  "option.modmenu.game_menu_button_style.icon": "Значок",
   "option.modmenu.random_java_colors": "Колір Java",
   "option.modmenu.random_java_colors.true": "Постачальник",
   "option.modmenu.random_java_colors.false": "Завжди червоний",
-  "option.modmenu.translate_names": "Імена",
-  "option.modmenu.translate_names.true": "Локалізовані",
-  "option.modmenu.translate_names.false": "Не локалізовані",
+  "option.modmenu.translate_names": "Назви",
+  "option.modmenu.translate_names.true": "Локалізовано",
+  "option.modmenu.translate_names.false": "Не локалізовано",
   "option.modmenu.translate_descriptions": "Описи",
   "option.modmenu.translate_descriptions.true": "Локалізовано",
   "option.modmenu.translate_descriptions.false": "Не локалізовано",
   "option.modmenu.update_checker": "Перевірка оновлень",
-  "option.modmenu.update_checker.true": "Увімкнена",
-  "option.modmenu.update_checker.false": "Вимкнена",
-  "option.modmenu.button_update_badge": "Індикатор оновлення",
-  "option.modmenu.button_update_badge.true": "Показаний",
-  "option.modmenu.button_update_badge.false": "Схований"
+  "option.modmenu.update_checker.true": "УВІМК.",
+  "option.modmenu.update_checker.false": "ВИМК.",
+  "option.modmenu.button_update_badge": "Індикатор оновлень",
+  "option.modmenu.button_update_badge.true": "Показано",
+  "option.modmenu.button_update_badge.false": "Приховано",
+  "option.modmenu.quick_configure": "Швидке налаштування",
+  "option.modmenu.quick_configure.true": "УВІМК.",
+  "option.modmenu.quick_configure.false": "ВИМК.",
+  "option.modmenu.update_channel": "Типи оновлень",
+  "option.modmenu.update_channel.alpha": "Усі",
+  "option.modmenu.update_channel.beta": "Релізи і бети",
+  "option.modmenu.update_channel.release": "Релізи"
 }
