--- a/src/main/resources/assets/modmenu/lang/es_es.json
+++ b/src/main/resources/assets/modmenu/lang/es_es.json
@@ -1,25 +1,29 @@
 {
-  "category.modmenu.name": "Menú de Mods",
-  "key.modmenu.open_menu": "Abrir el Menú de Mods",
+  "category.modmenu.name": "Mod Menu",
+  "key.modmenu.open_menu": "Abrir Mod Menu",
   "modmenu.title": "Mods",
-  "modmenu.nameTranslation.modmenu": "Menú de Mods",
-  "modmenu.descriptionTranslation.modmenu": "Añade un menú de mods para ver la lista de los mods que tienes instalados.",
-  "modmenu.loaded": "(%s Cargados)",
+  "modmenu.nameTranslation.modmenu": "Mod Menu",
+  "modmenu.descriptionTranslation.modmenu": "Añade un menú que muestra los mods que tienes instalados.",
+
+  "modmenu.loaded": "(%s cargados)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(%s Cargados...nice)",
-  "modmenu.loaded.420.secret": "(%s mods cargados... hazlo ígneo)",
-  "modmenu.mods.n": " (%s Mods)",
-  "modmenu.mods.1": " (%s Mod)",
-  "modmenu.mods.69.secret": " (%s Mods...nice)",
-  "modmenu.mods.420.secret": " (%s mods... hazlo ígneo)",
-  "modmenu.search": "Buscar mods",
-  "modmenu.searchTerms.library": "biblioteca api",
+  "modmenu.loaded.69.secret": "(%s cargados... Vaya, vaya.)",
+  "modmenu.loaded.420.secret": "(%s mods cargados... Que rule.)",
+  "modmenu.mods.n": " (%s mods)",
+  "modmenu.mods.1": " (%s mod)",
+  "modmenu.mods.69.secret": " (%s mods... Vaya, vaya.)",
+  "modmenu.mods.420.secret": " (%s mods... Que rule.)",
+
+  "modmenu.search": "Búsqueda de mods",
+  "modmenu.searchTerms.library": "libreria librería biblioteca api",
   "modmenu.searchTerms.patchwork": "patchwork forge fml",
-  "modmenu.searchTerms.modpack": "paquete de modpacks",
-  "modmenu.searchTerms.deprecated": "obsoleto anticuado viejo",
-  "modmenu.searchTerms.clientside": "mod de cliente",
-  "modmenu.searchTerms.configurable": "configuraciones configuraciones configura configurable opciones",
-  "modmenu.toggleFilterOptions": "Alternar Opciones de Filtro",
+  "modmenu.searchTerms.modpack": "paquete modpack modpacks",
+  "modmenu.searchTerms.deprecated": "obsoleto anticuado antiguo viejo desusado desuso",
+  "modmenu.searchTerms.clientside": "lado cliente",
+  "modmenu.searchTerms.configurable": "ajustes ajustar ajustable configuración configuraciones configurar configurable opción opciones",
+  "modmenu.searchTerms.hasUpdate": "actualización actualizaciones actualizar actualizados versión versiones",
+
+  "modmenu.toggleFilterOptions": "Alternar opciones de filtrado",
   "modmenu.showingMods.n": "Mostrando %s mods",
   "modmenu.showingMods.1": "Mostrando %s mod",
   "modmenu.showingLibraries.n": "Mostrando %s bibliotecas",
@@ -28,40 +32,48 @@
   "modmenu.showingModsLibraries.n.1": "Mostrando %s mods y %s biblioteca",
   "modmenu.showingModsLibraries.1.n": "Mostrando %s mod y %s bibliotecas",
   "modmenu.showingModsLibraries.1.1": "Mostrando %s mod y %s biblioteca",
+
   "modmenu.badge.library": "Biblioteca",
   "modmenu.badge.clientsideOnly": "Cliente",
   "modmenu.badge.deprecated": "Obsoleto",
   "modmenu.badge.forge": "Forge",
   "modmenu.badge.modpack": "Paquete de mods",
   "modmenu.badge.minecraft": "Minecraft",
-  "modmenu.dropInfo.line1": "Arrastra archivos en esta",
-  "modmenu.dropInfo.line2": "ventana para añadir mods",
+
+  "modmenu.dropInfo.line1": "Para añadir mods, arrastra",
+  "modmenu.dropInfo.line2": "los archivos a esta ventana.",
   "modmenu.dropConfirm": "¿Quieres copiar los siguientes mods a la carpeta de mods?",
-  "modmenu.dropSuccessful.line1": "Mods copiados correctamente",
-  "modmenu.dropSuccessful.line2": "Reinicia el juego para cargar los mods",
-  "modmenu.modIdToolTip": "ID del Mod: %s",
-  "modmenu.authorPrefix": "Por %s",
-  "modmenu.config": "Editar Configuración",
-  "modmenu.configure": "Configurar...",
-  "modmenu.configure.error": "Failed to load config screen for '%s'\nReport to '%s', not Mod Menu",
-  "modmenu.website": "Página Web",
+  "modmenu.dropSuccessful.line1": "Los mods se han copiado",
+  "modmenu.dropSuccessful.line2": "Reinicia el juego para cargarlos.",
+
+  "modmenu.modIdToolTip": "Id. del mod: %s",
+  "modmenu.authorPrefix": "Creado por %s",
+  "modmenu.config": "Editar opciones",
+  "modmenu.configure": "Abrir opciones",
+  "modmenu.configure.error": "La pantalla de opciones de \"%s\" no pudo abrirse.\nInforma de este error a los autores de \"%s\", no a los de Mod Menu.",
+  "modmenu.website": "Sitio web",
   "modmenu.issues": "Problemas",
+
   "modmenu.credits": "Créditos:",
-  "modmenu.viewCredits": "Mostrar Créditos",
+  "modmenu.viewCredits": "Ver créditos",
   "modmenu.license": "Licencia:",
-  "modmenu.links": "Links:",
-  "modmenu.source": "Fuente",
-  "modmenu.hasUpdate": "An update is available:",
-  "modmenu.childHasUpdate": "A child of this mod has an update available.",
-  "modmenu.updateText": "v%s on %s",
-  "modmenu.buymeacoffee": "Comprame un café",
+  "modmenu.links": "Enlaces:",
+  "modmenu.source": "Código fuente",
+  "modmenu.hasUpdate": "Actualización disponible:",
+  "modmenu.experimental": "(La característica de comprobación de actualizaciones es experimental.)",
+  "modmenu.childHasUpdate": "Actualización disponible para mod secundario.",
+  "modmenu.updateText": "v%s en %s",
+  "modmenu.install_version": "Instalar versión %s",
+  "modmenu.downloadLink": "Descargar",
+
+  "modmenu.buymeacoffee": "Buy Me a Coffee",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
   "modmenu.curseforge": "CurseForge",
   "modmenu.discord": "Discord",
-  "modmenu.donate": "Donar",
+  "modmenu.donate": "Donaciones",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "Versiones de Github",
+  "modmenu.github_releases": "Versiones de GitHub",
   "modmenu.github_sponsors": "GitHub Sponsors",
   "modmenu.kofi": "Ko-fi",
   "modmenu.liberapay": "Liberapay",
@@ -72,76 +84,97 @@
   "modmenu.paypal": "PayPal",
   "modmenu.reddit": "Reddit",
   "modmenu.twitch": "Twitch",
-  "modmenu.twitter": "Twitter",
+  "modmenu.twitter": "X (Twitter)",
   "modmenu.wiki": "Wiki",
   "modmenu.youtube": "YouTube",
-  "modmenu.modsFolder": "Abrir la Carpeta de Mods",
-  "modmenu.configsFolder": "Abrir la Carpeta de Configuración",
+
+  "modmenu.credits.role.author": "Autores",
+  "modmenu.credits.role.contributor": "Contribuidores",
+  "modmenu.credits.role.translator": "Tranductores",
+  "modmenu.credits.role.maintainer": "Mantenedores",
+  "modmenu.credits.role.playtester": "Testers",
+  "modmenu.credits.role.illustrator": "Ilustradores",
+  "modmenu.credits.role.owner": "Propietarios",
+	
+  "modmenu.modsFolder": "Abrir carpeta de mods",
+  "modmenu.configsFolder": "Abrir carpeta de opciones",
+
   "modmenu.nameTranslation.minecraft": "Minecraft",
   "modmenu.descriptionTranslation.minecraft": "El juego base.",
   "modmenu.nameTranslation.java": "Java",
   "modmenu.descriptionTranslation.java": "El entorno de ejecución de Java.",
-  "modmenu.javaDistributionName": "Ejecutando: %s",
-  "modmenu.options": "Opciones del Menú de Mods",
-  "option.modmenu.sorting": "Ordenar",
+  "modmenu.javaDistributionName": "Ejecutando: %s.",
+
+  "modmenu.options": "Opciones de Mod Menu",
+  "option.modmenu.sorting": "Orden",
   "option.modmenu.sorting.ascending": "A-Z",
   "option.modmenu.sorting.descending": "Z-A",
-  "option.modmenu.show_libraries": "Bibliotecas",
-  "option.modmenu.show_libraries.true": "Visibles",
-  "option.modmenu.show_libraries.false": "Ocultas",
-  "option.modmenu.hide_config_buttons": "Botones de Configuración",
-  "option.modmenu.hide_config_buttons.true": "Ocultas",
-  "option.modmenu.hide_config_buttons.false": "Visibles",
-  "option.modmenu.hide_badges": "Insignias del Mod",
-  "option.modmenu.hide_badges.true": "Ocultas",
-  "option.modmenu.hide_badges.false": "Visibles",
-  "option.modmenu.compact_list": "Lista",
+  "option.modmenu.show_libraries": "Mostrar bibliotecas",
+  "option.modmenu.show_libraries.true": "SÍ",
+  "option.modmenu.show_libraries.false": "NO",
+  "option.modmenu.hide_config_buttons": "Mostrar botones de opciones",
+  "option.modmenu.hide_config_buttons.true": "NO",
+  "option.modmenu.hide_config_buttons.false": "SÍ",
+  "option.modmenu.hide_badges": "Mostrar etiquetas",
+  "option.modmenu.hide_badges.true": "NO",
+  "option.modmenu.hide_badges.false": "SÍ",
+  "option.modmenu.compact_list": "Lista de mods",
   "option.modmenu.compact_list.true": "Compacta",
   "option.modmenu.compact_list.false": "Estándar",
-  "option.modmenu.hide_mod_links": "Enlaces de Mods",
-  "option.modmenu.hide_mod_links.true": "Ocultas",
-  "option.modmenu.hide_mod_links.false": "Visibles",
-  "option.modmenu.hide_mod_credits": "Créditos del Mod",
-  "option.modmenu.hide_mod_credits.true": "Ocultas",
-  "option.modmenu.hide_mod_credits.false": "Visibles",
-  "option.modmenu.hide_mod_license": "Licencia del Mod",
-  "option.modmenu.hide_mod_license.true": "Ocultas",
-  "option.modmenu.hide_mod_license.false": "Visibles",
-  "option.modmenu.count_children": "Submods",
-  "option.modmenu.count_children.true": "Contados",
-  "option.modmenu.count_children.false": "Sin contar",
-  "option.modmenu.count_libraries": "Bibliotecas",
-  "option.modmenu.count_libraries.true": "Contados",
-  "option.modmenu.count_libraries.false": "Sin contar",
-  "option.modmenu.count_hidden_mods": "Mods ocultos",
-  "option.modmenu.count_hidden_mods.true": "Contados",
-  "option.modmenu.count_hidden_mods.false": "Sin contar",
-  "option.modmenu.mod_count_location": "Número de Mods",
-  "option.modmenu.mod_count_location.title_screen": "Esquina de Título",
-  "option.modmenu.mod_count_location.mods_button": "Botón de Mods",
-  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Ambos",
-  "option.modmenu.mod_count_location.none": "Ninguno",
-  "option.modmenu.easter_eggs": "Secretos",
-  "option.modmenu.easter_eggs.true": "Activados",
-  "option.modmenu.easter_eggs.false": "Desactivados",
-  "option.modmenu.mods_button_style": "Botón de Mods",
+  "option.modmenu.hide_mod_links": "Mostrar enlaces",
+  "option.modmenu.hide_mod_links.true": "NO",
+  "option.modmenu.hide_mod_links.false": "SÍ",
+  "option.modmenu.hide_mod_credits": "Mostrar créditos de los mods",
+  "option.modmenu.hide_mod_credits.true": "NO",
+  "option.modmenu.hide_mod_credits.false": "SÍ",
+  "option.modmenu.hide_mod_license": "Mostrar licencias de los mods",
+  "option.modmenu.hide_mod_license.true": "NO",
+  "option.modmenu.hide_mod_license.false": "SÍ",
+  "option.modmenu.count_children": "Contar mods secundarios",
+  "option.modmenu.count_children.true": "SÍ",
+  "option.modmenu.count_children.false": "NO",
+  "option.modmenu.count_libraries": "Contar bibliotecas",
+  "option.modmenu.count_libraries.true": "SÍ",
+  "option.modmenu.count_libraries.false": "NO",
+  "option.modmenu.count_hidden_mods": "Contar mods ocultos",
+  "option.modmenu.count_hidden_mods.true": "SÍ",
+  "option.modmenu.count_hidden_mods.false": "NO",
+  "option.modmenu.mod_count_location": "Ubicación del recuento de mods",
+  "option.modmenu.mod_count_location.title_screen": "Pantalla de título",
+  "option.modmenu.mod_count_location.mods_button": "Botón de mods",
+  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Ambas",
+  "option.modmenu.mod_count_location.none": "Ninguna",
+  "option.modmenu.easter_eggs": "Activar secretos",
+  "option.modmenu.easter_eggs.true": "SÍ",
+  "option.modmenu.easter_eggs.false": "NO",
+  "option.modmenu.mods_button_style": "Botón de la pantalla de título",
   "option.modmenu.mods_button_style.classic": "Debajo de Realms",
-  "option.modmenu.mods_button_style.replace_realms": "Reemplazar Realms",
-  "option.modmenu.mods_button_style.shrink": "Adyacente",
+  "option.modmenu.mods_button_style.replace_realms": "Remplazar Realms",
+  "option.modmenu.mods_button_style.shrink": "Al lado de Realms",
   "option.modmenu.mods_button_style.icon": "Icono",
+  "option.modmenu.game_menu_button_style": "Botón del menú de juego",
+  "option.modmenu.game_menu_button_style.insert": "Insertar",
+  "option.modmenu.game_menu_button_style.replace": "Remplazar",
   "option.modmenu.random_java_colors": "Color de Java",
-  "option.modmenu.random_java_colors.true": "Vendedor",
+  "option.modmenu.random_java_colors.true": "Definido por proveedor",
   "option.modmenu.random_java_colors.false": "Siempre rojo",
-  "option.modmenu.translate_names": "Nombres",
-  "option.modmenu.translate_names.true": "Localizado",
-  "option.modmenu.translate_names.false": "Sin localizar",
-  "option.modmenu.translate_descriptions": "Descripciones",
-  "option.modmenu.translate_descriptions.true": "Localizado",
-  "option.modmenu.translate_descriptions.false": "Sin localizar",
-  "option.modmenu.update_checker": "Update Checker",
-  "option.modmenu.update_checker.true": "Activados",
-  "option.modmenu.update_checker.false": "Desactivados",
-  "option.modmenu.button_update_badge": "Update Indicator",
-  "option.modmenu.button_update_badge.true": "Visibles",
-  "option.modmenu.button_update_badge.false": "Ocultas"
+  "option.modmenu.translate_names": "Nombres localizados",
+  "option.modmenu.translate_names.true": "SÍ",
+  "option.modmenu.translate_names.false": "NO",
+  "option.modmenu.translate_descriptions": "Descripciones localizadas",
+  "option.modmenu.translate_descriptions.true": "SÍ",
+  "option.modmenu.translate_descriptions.false": "NO",
+  "option.modmenu.update_checker": "Comprobar actualizaciones",
+  "option.modmenu.update_checker.true": "SÍ",
+  "option.modmenu.update_checker.false": "NO",
+  "option.modmenu.button_update_badge": "Mostrar indicador de actualización",
+  "option.modmenu.button_update_badge.true": "SÍ",
+  "option.modmenu.button_update_badge.false": "NO"
+  "option.modmenu.quick_configure": "Configuración rápida",
+  "option.modmenu.quick_configure.true": "SÍ",
+  "option.modmenu.quick_configure.false": "NO",
+  "option.modmenu.update_channel": "Canal de actualizaciones",
+  "option.modmenu.update_channel.alpha": "Todos",
+  "option.modmenu.update_channel.beta": "Versiones de lanzamiento y versiones beta",
+  "option.modmenu.update_channel.release": "Versiones de lanzamiento"
 }
