--- a/src/main/resources/assets/modmenu/lang/es_ar.json
+++ b/src/main/resources/assets/modmenu/lang/es_ar.json
@@ -1,68 +1,80 @@
 {
-  "category.modmenu.name": "Menu de mods",
-  "key.modmenu.open_menu": "Abrir el menu de mods",
+  "category.modmenu.name": "Menú de Mods",
+  "key.modmenu.open_menu": "Abrir Menú de Mods",
   "modmenu.title": "Mods",
-  "modmenu.nameTranslation.modmenu": "Menu de mods",
-  "modmenu.descriptionTranslation.modmenu": "Agrega un menú de mods para ver la lista de mods instalados.",
+  "modmenu.nameTranslation.modmenu": "Menú de Mods",
+  "modmenu.descriptionTranslation.modmenu": "Agrega un menú para ver la lista de mods que tenés instalados.",
+
   "modmenu.loaded": "(%s cargados)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(%s Mods cargados... agradable)",
-  "modmenu.loaded.420.secret": "(%s Mods cargados... quémalo)",
-  "modmenu.mods.n": " (%s Mods)",
-  "modmenu.mods.1": " (%s Mod)",
-  "modmenu.mods.69.secret": " (%s Mods... agradable)",
-  "modmenu.mods.420.secret": " (%s Mods... quemalo)",
+  "modmenu.loaded.69.secret": "(%s cargados... nice)",
+  "modmenu.loaded.420.secret": "(%s cargados... blaze it)",
+  "modmenu.mods.n": " (%s mods)",
+  "modmenu.mods.1": " (%s mod)",
+  "modmenu.mods.69.secret": " (%s mods... nice)",
+  "modmenu.mods.420.secret": " (%s mods... blaze it)",
+
   "modmenu.search": "Buscar mods",
-  "modmenu.searchTerms.library": "librería biblioteca api",
+  "modmenu.searchTerms.library": "api biblioteca",
   "modmenu.searchTerms.patchwork": "patchwork forge fml",
-  "modmenu.searchTerms.modpack": "paquete de modpacks",
-  "modmenu.searchTerms.deprecated": "obsoleto desactualizado viejo",
-  "modmenu.searchTerms.clientside": "lado del cliente de juego",
-  "modmenu.searchTerms.configurable": "configuraciones ajustes ajusta configura configurable opciones",
-  "modmenu.toggleFilterOptions": "Cambiar opciones de filtro",
+  "modmenu.searchTerms.modpack": "modpack paquete",
+  "modmenu.searchTerms.deprecated": "obsoleto viejo anticuado",
+  "modmenu.searchTerms.clientside": "solo cliente lado del juego",
+  "modmenu.searchTerms.configurable": "configuraciones opciones ajustes configurable",
+  "modmenu.searchTerms.hasUpdate": "actualizaciones versión",
+
+  "modmenu.toggleFilterOptions": "Alternar opciones de filtro",
   "modmenu.showingMods.n": "Mostrando %s mods",
   "modmenu.showingMods.1": "Mostrando %s mod",
-  "modmenu.showingLibraries.n": "Mostrando %s librerías",
-  "modmenu.showingLibraries.1": "Mostrando %s librería",
-  "modmenu.showingModsLibraries.n.n": "Mostrando %s mods y %s librerías",
-  "modmenu.showingModsLibraries.n.1": "Mostrando %s mods y %s librería",
-  "modmenu.showingModsLibraries.1.n": "Mostrando %s mod y %s librerías",
-  "modmenu.showingModsLibraries.1.1": "Mostrando %s mod y %s librería",
-  "modmenu.badge.library": "Libreria",
+  "modmenu.showingLibraries.n": "Mostrando %s bibliotecas",
+  "modmenu.showingLibraries.1": "Mostrando %s biblioteca",
+  "modmenu.showingModsLibraries.n.n": "Mostrando %s mods y %s bibliotecas",
+  "modmenu.showingModsLibraries.n.1": "Mostrando %s mods y %s biblioteca",
+  "modmenu.showingModsLibraries.1.n": "Mostrando %s mod y %s bibliotecas",
+  "modmenu.showingModsLibraries.1.1": "Mostrando %s mod y %s biblioteca",
+
+  "modmenu.badge.library": "Biblioteca",
   "modmenu.badge.clientsideOnly": "Cliente",
   "modmenu.badge.deprecated": "Obsoleto",
   "modmenu.badge.forge": "Forge",
-  "modmenu.badge.modpack": "Paquete de mods",
+  "modmenu.badge.modpack": "Modpack",
   "modmenu.badge.minecraft": "Minecraft",
-  "modmenu.dropInfo.line1": "Arrastra y suelta archivos en",
+
+  "modmenu.dropInfo.line1": "Arrastrá y soltá archivos en",
   "modmenu.dropInfo.line2": "esta ventana para agregar mods",
-  "modmenu.dropConfirm": "¿Deseas copiar los siguientes mods a su directorio?",
+  "modmenu.dropConfirm": "¿Querés copiar los siguientes mods a la carpeta de mods?",
   "modmenu.dropSuccessful.line1": "Mods copiados con éxito",
-  "modmenu.dropSuccessful.line2": "Reinicia el juego para cargar mods",
-  "modmenu.modIdToolTip": "ID del Mod: %s",
+  "modmenu.dropSuccessful.line2": "Reiniciá el juego para cargarlos",
+
+  "modmenu.modIdToolTip": "ID del mod: %s",
   "modmenu.authorPrefix": "Por %s",
-  "modmenu.config": "Editar configuración",
+  "modmenu.config": "Editar config",
   "modmenu.configure": "Configurar...",
-  "modmenu.configure.error": "Failed to load config screen for '%s'\nReport to '%s', not Mod Menu",
-  "modmenu.website": "Página web",
-  "modmenu.issues": "Reportar problemas",
-  "modmenu.credits": "Creditos:",
+  "modmenu.configure.error": "No se pudo cargar la pantalla de configuración de '%s'\nReportalo a '%s', no a Mod Menu",
+  "modmenu.website": "Sitio web",
+  "modmenu.issues": "Problemas",
+
+  "modmenu.credits": "Créditos:",
   "modmenu.viewCredits": "Ver créditos",
   "modmenu.license": "Licencia:",
-  "modmenu.links": "Vínculos:",
-  "modmenu.source": "Fuente",
-  "modmenu.hasUpdate": "An update is available:",
-  "modmenu.childHasUpdate": "A child of this mod has an update available.",
-  "modmenu.updateText": "v%s on %s",
-  "modmenu.buymeacoffee": "Comprame un café",
+  "modmenu.links": "Enlaces:",
+  "modmenu.source": "Código fuente",
+  "modmenu.hasUpdate": "Hay una actualización disponible:",
+  "modmenu.experimental": "(¡El buscador de actualizaciones de Mod Menu es experimental!)",
+  "modmenu.childHasUpdate": "Un complemento de este mod tiene una actualización disponible.",
+  "modmenu.updateText": "v%s en %s",
+  "modmenu.install_version": "Instalar versión %s",
+  "modmenu.downloadLink": "Descargar",
+
+  "modmenu.buymeacoffee": "Invitame un café",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
   "modmenu.curseforge": "CurseForge",
   "modmenu.discord": "Discord",
   "modmenu.donate": "Donar",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "Versiones de GitHub",
-  "modmenu.github_sponsors": "GitHub Sponsors",
+  "modmenu.github_releases": "GitHub Releases",
+  "modmenu.github_sponsors": "Patrocinadores en GitHub",
   "modmenu.kofi": "Ko-fi",
   "modmenu.liberapay": "Liberapay",
   "modmenu.mastodon": "Mastodon",
@@ -72,76 +84,99 @@
   "modmenu.paypal": "PayPal",
   "modmenu.reddit": "Reddit",
   "modmenu.twitch": "Twitch",
-  "modmenu.twitter": "Twitter",
+  "modmenu.twitter": "X (Twitter)",
   "modmenu.wiki": "Wiki",
   "modmenu.youtube": "YouTube",
+
+  "modmenu.credits.role.author": "Autores",
+  "modmenu.credits.role.contributor": "Colaboradores",
+  "modmenu.credits.role.translator": "Traductores",
+  "modmenu.credits.role.maintainer": "Mantenedores",
+  "modmenu.credits.role.playtester": "Testers",
+  "modmenu.credits.role.illustrator": "Ilustradores",
+  "modmenu.credits.role.owner": "Responsables",
+
   "modmenu.modsFolder": "Abrir carpeta de mods",
-  "modmenu.configsFolder": "Abrir carpeta de ajustes",
+  "modmenu.configsFolder": "Abrir carpeta de configs",
+
   "modmenu.nameTranslation.minecraft": "Minecraft",
   "modmenu.descriptionTranslation.minecraft": "El juego base.",
   "modmenu.nameTranslation.java": "Java",
   "modmenu.descriptionTranslation.java": "El entorno de ejecución de Java.",
   "modmenu.javaDistributionName": "Ejecutando: %s",
-  "modmenu.options": "Opciones del menú de mods",
+
+  "modmenu.options": "Opciones de Mod Menu",
   "option.modmenu.sorting": "Ordenar",
   "option.modmenu.sorting.ascending": "A-Z",
   "option.modmenu.sorting.descending": "Z-A",
-  "option.modmenu.show_libraries": "Librerías",
-  "option.modmenu.show_libraries.true": "Mostrados",
-  "option.modmenu.show_libraries.false": "Ocultos",
-  "option.modmenu.hide_config_buttons": "Botones de configuración",
+  "option.modmenu.sorting.has_update": "Con actualización",
+  "option.modmenu.show_libraries": "Bibliotecas",
+  "option.modmenu.show_libraries.true": "Mostradas",
+  "option.modmenu.show_libraries.false": "Ocultas",
+  "option.modmenu.hide_config_buttons": "Botones de config",
   "option.modmenu.hide_config_buttons.true": "Ocultos",
-  "option.modmenu.hide_config_buttons.false": "Mostrados",
-  "option.modmenu.hide_badges": "Insignias del Mod",
-  "option.modmenu.hide_badges.true": "Ocultos",
-  "option.modmenu.hide_badges.false": "Mostrados",
+  "option.modmenu.hide_config_buttons.false": "Visibles",
+  "option.modmenu.hide_badges": "Insignias de mod",
+  "option.modmenu.hide_badges.true": "Ocultas",
+  "option.modmenu.hide_badges.false": "Visibles",
   "option.modmenu.compact_list": "Lista",
   "option.modmenu.compact_list.true": "Compacta",
   "option.modmenu.compact_list.false": "Estándar",
-  "option.modmenu.hide_mod_links": "Enlaces del Mod",
+  "option.modmenu.hide_mod_links": "Enlaces de mods",
   "option.modmenu.hide_mod_links.true": "Ocultos",
-  "option.modmenu.hide_mod_links.false": "Mostrados",
-  "option.modmenu.hide_mod_credits": "Créditos del Mod",
+  "option.modmenu.hide_mod_links.false": "Visibles",
+  "option.modmenu.hide_mod_credits": "Créditos de mod",
   "option.modmenu.hide_mod_credits.true": "Ocultos",
-  "option.modmenu.hide_mod_credits.false": "Mostrados",
-  "option.modmenu.hide_mod_license": "Licencia del Mod",
-  "option.modmenu.hide_mod_license.true": "Ocultos",
-  "option.modmenu.hide_mod_license.false": "Mostrados",
-  "option.modmenu.count_children": "Contar submods",
+  "option.modmenu.hide_mod_credits.false": "Visibles",
+  "option.modmenu.hide_mod_license": "Licencia de mod",
+  "option.modmenu.hide_mod_license.true": "Oculta",
+  "option.modmenu.hide_mod_license.false": "Visible",
+  "option.modmenu.count_children": "Complementos",
   "option.modmenu.count_children.true": "Contados",
-  "option.modmenu.count_children.false": "Sin contar",
-  "option.modmenu.count_libraries": "Librerías",
-  "option.modmenu.count_libraries.true": "Contados",
-  "option.modmenu.count_libraries.false": "Sin contar",
+  "option.modmenu.count_children.false": "No contados",
+  "option.modmenu.count_libraries": "Bibliotecas",
+  "option.modmenu.count_libraries.true": "Contadas",
+  "option.modmenu.count_libraries.false": "No contadas",
   "option.modmenu.count_hidden_mods": "Mods ocultos",
   "option.modmenu.count_hidden_mods.true": "Contados",
-  "option.modmenu.count_hidden_mods.false": "Sin contar",
-  "option.modmenu.mod_count_location": "Cantidad de mods",
+  "option.modmenu.count_hidden_mods.false": "No contados",
+  "option.modmenu.mod_count_location": "Conteo de mods",
   "option.modmenu.mod_count_location.title_screen": "Esquina del título",
-  "option.modmenu.mod_count_location.mods_button": "Botón de Mods",
+  "option.modmenu.mod_count_location.mods_button": "Botón de mods",
   "option.modmenu.mod_count_location.title_screen_and_mods_button": "Ambos",
-  "option.modmenu.mod_count_location.none": "Ninguna",
-  "option.modmenu.easter_eggs": "Extras secretos",
-  "option.modmenu.easter_eggs.true": "Habilitado",
-  "option.modmenu.easter_eggs.false": "Desactivado",
-  "option.modmenu.mods_button_style": "Botón de Mods",
+  "option.modmenu.mod_count_location.none": "Ninguno",
+  "option.modmenu.easter_eggs": "Easter Eggs",
+  "option.modmenu.easter_eggs.true": "Activados",
+  "option.modmenu.easter_eggs.false": "Desactivados",
+  "option.modmenu.mods_button_style": "Pantalla de título",
   "option.modmenu.mods_button_style.classic": "Debajo de Realms",
   "option.modmenu.mods_button_style.replace_realms": "Reemplazar Realms",
   "option.modmenu.mods_button_style.shrink": "Adyacente",
-  "option.modmenu.mods_button_style.icon": "Icono",
+  "option.modmenu.mods_button_style.icon": "Ícono",
+  "option.modmenu.game_menu_button_style": "Menú del juego",
+  "option.modmenu.game_menu_button_style.insert": "Insertar",
+  "option.modmenu.game_menu_button_style.replace": "Reemplazar",
+  "option.modmenu.game_menu_button_style.icon": "Ícono",
   "option.modmenu.random_java_colors": "Color de Java",
-  "option.modmenu.random_java_colors.true": "Vendedor",
+  "option.modmenu.random_java_colors.true": "Proveedor",
   "option.modmenu.random_java_colors.false": "Siempre rojo",
   "option.modmenu.translate_names": "Nombres",
-  "option.modmenu.translate_names.true": "Localizado",
+  "option.modmenu.translate_names.true": "Localizados",
   "option.modmenu.translate_names.false": "Sin localizar",
   "option.modmenu.translate_descriptions": "Descripciones",
-  "option.modmenu.translate_descriptions.true": "Localizado",
+  "option.modmenu.translate_descriptions.true": "Localizadas",
   "option.modmenu.translate_descriptions.false": "Sin localizar",
-  "option.modmenu.update_checker": "Update Checker",
-  "option.modmenu.update_checker.true": "Habilitado",
+  "option.modmenu.update_checker": "Buscador de actualizaciones",
+  "option.modmenu.update_checker.true": "Activado",
   "option.modmenu.update_checker.false": "Desactivado",
-  "option.modmenu.button_update_badge": "Update Indicator",
-  "option.modmenu.button_update_badge.true": "Mostrados",
-  "option.modmenu.button_update_badge.false": "Ocultos"
+  "option.modmenu.button_update_badge": "Indicador de actualización",
+  "option.modmenu.button_update_badge.true": "Visible",
+  "option.modmenu.button_update_badge.false": "Oculto",
+  "option.modmenu.quick_configure": "Configuración rápida",
+  "option.modmenu.quick_configure.true": "Activada",
+  "option.modmenu.quick_configure.false": "Desactivada",
+  "option.modmenu.update_channel": "Canal de actualización",
+  "option.modmenu.update_channel.alpha": "Todos",
+  "option.modmenu.update_channel.beta": "Release y Beta",
+  "option.modmenu.update_channel.release": "Release"
 }
