add polish string for the new sorting type

--- a/src/main/resources/assets/modmenu/lang/pl_pl.json
+++ b/src/main/resources/assets/modmenu/lang/pl_pl.json
@@ -109,6 +109,7 @@
   "option.modmenu.sorting": "Sortuj",
   "option.modmenu.sorting.ascending": "A-Z",
   "option.modmenu.sorting.descending": "Z-A",
+  "option.modmenu.sorting.has_update": "Ma aktualizację",
   "option.modmenu.show_libraries": "Biblioteki",
   "option.modmenu.show_libraries.true": "Pokazuj",
   "option.modmenu.show_libraries.false": "Ukrywaj",
