--- a/src/main/resources/assets/modmenu/lang/hu_hu.json
+++ b/src/main/resources/assets/modmenu/lang/hu_hu.json
@@ -1,68 +1,68 @@
 {
-  "category.modmenu.name": "Mod Menu",
-  "key.modmenu.open_menu": "Open Mod Menu",
-  "modmenu.title": "Mods",
-  "modmenu.nameTranslation.modmenu": "Mod Menu",
-  "modmenu.descriptionTranslation.modmenu": "Adds a mod menu to view the list of mods you have installed.",
-  "modmenu.loaded": "(%s Loaded)",
+  "category.modmenu.name": "Mod Menü",
+  "key.modmenu.open_menu": "Mod Menü Megnyitása",
+  "modmenu.title": "Modok",
+  "modmenu.nameTranslation.modmenu": "Mod Menü",
+  "modmenu.descriptionTranslation.modmenu": "Hozzáad egy mod menüt, amelyben megtekintheted a telepített modokat.",
+  "modmenu.loaded": "(%s betöltve)",
   "modmenu.loaded.short": "(%s)",
-  "modmenu.loaded.69.secret": "(%s Loaded...nice)",
-  "modmenu.loaded.420.secret": "(%s Loaded...blaze it)",
-  "modmenu.mods.n": " (%s Mods)",
-  "modmenu.mods.1": " (%s Mod)",
-  "modmenu.mods.69.secret": " (%s Mods...nice)",
-  "modmenu.mods.420.secret": " (%s Mods...blaze it)",
-  "modmenu.search": "Search for mods",
-  "modmenu.searchTerms.library": "api library",
+  "modmenu.loaded.69.secret": "(%s betöltve...szép)",
+  "modmenu.loaded.420.secret": "(%s betöltve...gyújts rá)",
+  "modmenu.mods.n": " (%s mod)",
+  "modmenu.mods.1": " (%s mod)",
+  "modmenu.mods.69.secret": " (%s mod...szép)",
+  "modmenu.mods.420.secret": " (%s mod...gyújts rá)",
+  "modmenu.search": "Modok keresése",
+  "modmenu.searchTerms.library": "api library könyvtár",
   "modmenu.searchTerms.patchwork": "patchwork forge fml",
-  "modmenu.searchTerms.modpack": "modpack pack",
-  "modmenu.searchTerms.deprecated": "deprecated outdated old",
-  "modmenu.searchTerms.clientside": "clientside gameside",
-  "modmenu.searchTerms.configurable": "configurations configs configures configurable options",
-  "modmenu.toggleFilterOptions": "Toggle Filter Options",
-  "modmenu.showingMods.n": "Showing %s mods",
-  "modmenu.showingMods.1": "Showing %s mod",
-  "modmenu.showingLibraries.n": "Showing %s libraries",
-  "modmenu.showingLibraries.1": "Showing %s library",
-  "modmenu.showingModsLibraries.n.n": "Showing %s mods and %s libraries",
-  "modmenu.showingModsLibraries.n.1": "Showing %s mods and %s library",
-  "modmenu.showingModsLibraries.1.n": "Showing %s mod and %s libraries",
-  "modmenu.showingModsLibraries.1.1": "Showing %s mod and %s library",
-  "modmenu.badge.library": "Library",
-  "modmenu.badge.clientsideOnly": "Client",
-  "modmenu.badge.deprecated": "Deprecated",
+  "modmenu.searchTerms.modpack": "modpack pack csomag modcsomag",
+  "modmenu.searchTerms.deprecated": "deprecated old elavult régi",
+  "modmenu.searchTerms.clientside": "client-side clientside kliensoldali játékoldali",
+  "modmenu.searchTerms.configurable": "setting configuration configurable options beállítás konfiguráció konfigurálható opciók",
+  "modmenu.toggleFilterOptions": "Szűrőbeállítások ki-/bekapcsolása",
+  "modmenu.showingMods.n": "%s mod megjelenítve",
+  "modmenu.showingMods.1": "%s mod megjelenítve",
+  "modmenu.showingLibraries.n": "%s könyvtár megjelenítve",
+  "modmenu.showingLibraries.1": "%s könyvtár megjelenítve",
+  "modmenu.showingModsLibraries.n.n": "%s mod és %s könyvtár megjelenítve",
+  "modmenu.showingModsLibraries.n.1": "%s mod és %s könyvtár megjelenítve",
+  "modmenu.showingModsLibraries.1.n": "%s mod és %s könyvtár megjelenítve",
+  "modmenu.showingModsLibraries.1.1": "%s mod és %s könyvtár megjelenítve",
+  "modmenu.badge.library": "Könyvtár",
+  "modmenu.badge.clientsideOnly": "Kliens",
+  "modmenu.badge.deprecated": "Elavult",
   "modmenu.badge.forge": "Forge",
   "modmenu.badge.modpack": "Modpack",
   "modmenu.badge.minecraft": "Minecraft",
-  "modmenu.dropInfo.line1": "Drag and drop files into",
-  "modmenu.dropInfo.line2": "this window to add mods",
-  "modmenu.dropConfirm": "Do you want to copy the following mods into the mods directory?",
-  "modmenu.dropSuccessful.line1": "Successfully copied mods",
-  "modmenu.dropSuccessful.line2": "Restart game to load mods",
-  "modmenu.modIdToolTip": "Mod ID: %s",
-  "modmenu.authorPrefix": "By %s",
-  "modmenu.config": "Edit Config",
-  "modmenu.configure": "Configure...",
-  "modmenu.configure.error": "Failed to load config screen for '%s'\nReport to '%s', not Mod Menu",
-  "modmenu.website": "Website",
-  "modmenu.issues": "Issues",
-  "modmenu.credits": "Credits:",
-  "modmenu.viewCredits": "View Credits",
-  "modmenu.license": "License:",
-  "modmenu.links": "Links:",
-  "modmenu.source": "Source",
-  "modmenu.hasUpdate": "An update is available:",
-  "modmenu.childHasUpdate": "A child of this mod has an update available.",
-  "modmenu.updateText": "v%s on %s",
-  "modmenu.buymeacoffee": "Buy Me a Coffee",
+  "modmenu.dropInfo.line1": "Húzd ide a fájlokat",
+  "modmenu.dropInfo.line2": "a modok hozzáadásához",
+  "modmenu.dropConfirm": "Másolni szeretnéd a következő modokat a mods mappába?",
+  "modmenu.dropSuccessful.line1": "Modok sikeresen másolva",
+  "modmenu.dropSuccessful.line2": "Indítsd újra a játékot a betöltésükhöz",
+  "modmenu.modIdToolTip": "Mod azonosító: %s",
+  "modmenu.authorPrefix": "Készítette: %s",
+  "modmenu.config": "Konfiguráció szerkesztése",
+  "modmenu.configure": "Beállítás...",
+  "modmenu.configure.error": "Nem sikerült betölteni a(z) '%s' beállítóképernyőt\nJelentsd a(z) '%s' modnak, ne a Mod Menünek",
+  "modmenu.website": "Weboldal",
+  "modmenu.issues": "Hibák",
+  "modmenu.credits": "Készítők:",
+  "modmenu.viewCredits": "Készítők megtekintése",
+  "modmenu.license": "Licenc:",
+  "modmenu.links": "Linkek:",
+  "modmenu.source": "Forrás",
+  "modmenu.hasUpdate": "Frissítés érhető el:",
+  "modmenu.childHasUpdate": "Ennek a modnak egyik almodulja frissítést kapott.",
+  "modmenu.updateText": "v%s (%s)",
+  "modmenu.buymeacoffee": "Vegyél nekem kávét",
   "modmenu.coindrop": "Coindrop",
   "modmenu.crowdin": "Crowdin",
   "modmenu.curseforge": "CurseForge",
   "modmenu.discord": "Discord",
-  "modmenu.donate": "Donate",
+  "modmenu.donate": "Adományozás",
   "modmenu.flattr": "Flattr",
-  "modmenu.github_releases": "GitHub Releases",
-  "modmenu.github_sponsors": "GitHub Sponsors",
+  "modmenu.github_releases": "GitHub Kiadások",
+  "modmenu.github_sponsors": "GitHub Támogatók",
   "modmenu.kofi": "Ko-fi",
   "modmenu.liberapay": "Liberapay",
   "modmenu.mastodon": "Mastodon",
@@ -75,73 +75,73 @@
   "modmenu.twitter": "Twitter",
   "modmenu.wiki": "Wiki",
   "modmenu.youtube": "YouTube",
-  "modmenu.modsFolder": "Open Mods Folder",
-  "modmenu.configsFolder": "Open Configs Folder",
+  "modmenu.modsFolder": "Mods mappa megnyitása",
+  "modmenu.configsFolder": "Konfig mappa megnyitása",
   "modmenu.nameTranslation.minecraft": "Minecraft",
-  "modmenu.descriptionTranslation.minecraft": "The base game.",
+  "modmenu.descriptionTranslation.minecraft": "Az alapjáték.",
   "modmenu.nameTranslation.java": "Java",
-  "modmenu.descriptionTranslation.java": "The Java runtime environment.",
-  "modmenu.javaDistributionName": "Running: %s",
-  "modmenu.options": "Mod Menu Options",
-  "option.modmenu.sorting": "Sort",
+  "modmenu.descriptionTranslation.java": "A Java futtatókörnyezet.",
+  "modmenu.javaDistributionName": "Futtatva: %s",
+  "modmenu.options": "Mod Menü Beállítások",
+  "option.modmenu.sorting": "Rendezés",
   "option.modmenu.sorting.ascending": "A-Z",
   "option.modmenu.sorting.descending": "Z-A",
-  "option.modmenu.show_libraries": "Libraries",
-  "option.modmenu.show_libraries.true": "Shown",
-  "option.modmenu.show_libraries.false": "Hidden",
-  "option.modmenu.hide_config_buttons": "Config Buttons",
-  "option.modmenu.hide_config_buttons.true": "Hidden",
-  "option.modmenu.hide_config_buttons.false": "Shown",
-  "option.modmenu.hide_badges": "Mod Badges",
-  "option.modmenu.hide_badges.true": "Hidden",
-  "option.modmenu.hide_badges.false": "Shown",
-  "option.modmenu.compact_list": "List",
-  "option.modmenu.compact_list.true": "Compact",
-  "option.modmenu.compact_list.false": "Standard",
-  "option.modmenu.hide_mod_links": "Mod Links",
-  "option.modmenu.hide_mod_links.true": "Hidden",
-  "option.modmenu.hide_mod_links.false": "Shown",
-  "option.modmenu.hide_mod_credits": "Mod Credits",
-  "option.modmenu.hide_mod_credits.true": "Hidden",
-  "option.modmenu.hide_mod_credits.false": "Shown",
-  "option.modmenu.hide_mod_license": "Mod License",
-  "option.modmenu.hide_mod_license.true": "Hidden",
-  "option.modmenu.hide_mod_license.false": "Shown",
-  "option.modmenu.count_children": "Children",
-  "option.modmenu.count_children.true": "Counted",
-  "option.modmenu.count_children.false": "Not Counted",
-  "option.modmenu.count_libraries": "Libraries",
-  "option.modmenu.count_libraries.true": "Counted",
-  "option.modmenu.count_libraries.false": "Not Counted",
-  "option.modmenu.count_hidden_mods": "Hidden Mods",
-  "option.modmenu.count_hidden_mods.true": "Counted",
-  "option.modmenu.count_hidden_mods.false": "Not Counted",
-  "option.modmenu.mod_count_location": "Mod Count",
-  "option.modmenu.mod_count_location.title_screen": "Title Corner",
-  "option.modmenu.mod_count_location.mods_button": "Mods Button",
-  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Both",
-  "option.modmenu.mod_count_location.none": "Neither",
-  "option.modmenu.easter_eggs": "Easter Eggs",
-  "option.modmenu.easter_eggs.true": "Enabled",
-  "option.modmenu.easter_eggs.false": "Disabled",
-  "option.modmenu.mods_button_style": "Mods Button",
-  "option.modmenu.mods_button_style.classic": "Below Realms",
-  "option.modmenu.mods_button_style.replace_realms": "Replace Realms",
-  "option.modmenu.mods_button_style.shrink": "Adjacent",
-  "option.modmenu.mods_button_style.icon": "Icon",
-  "option.modmenu.random_java_colors": "Java Color",
-  "option.modmenu.random_java_colors.true": "Vendor",
-  "option.modmenu.random_java_colors.false": "Always Red",
-  "option.modmenu.translate_names": "Names",
-  "option.modmenu.translate_names.true": "Localized",
-  "option.modmenu.translate_names.false": "Not Localized",
-  "option.modmenu.translate_descriptions": "Descriptions",
-  "option.modmenu.translate_descriptions.true": "Localized",
-  "option.modmenu.translate_descriptions.false": "Not Localized",
-  "option.modmenu.update_checker": "Update Checker",
-  "option.modmenu.update_checker.true": "Enabled",
-  "option.modmenu.update_checker.false": "Disabled",
-  "option.modmenu.button_update_badge": "Update Indicator",
-  "option.modmenu.button_update_badge.true": "Shown",
-  "option.modmenu.button_update_badge.false": "Hidden"
+  "option.modmenu.show_libraries": "Könyvtárak",
+  "option.modmenu.show_libraries.true": "Megjelenítve",
+  "option.modmenu.show_libraries.false": "Elrejtve",
+  "option.modmenu.hide_config_buttons": "Konfig Gombok",
+  "option.modmenu.hide_config_buttons.true": "Elrejtve",
+  "option.modmenu.hide_config_buttons.false": "Megjelenítve",
+  "option.modmenu.hide_badges": "Mod Jelvények",
+  "option.modmenu.hide_badges.true": "Elrejtve",
+  "option.modmenu.hide_badges.false": "Megjelenítve",
+  "option.modmenu.compact_list": "Lista",
+  "option.modmenu.compact_list.true": "Kompakt",
+  "option.modmenu.compact_list.false": "Normál",
+  "option.modmenu.hide_mod_links": "Mod Linkek",
+  "option.modmenu.hide_mod_links.true": "Elrejtve",
+  "option.modmenu.hide_mod_links.false": "Megjelenítve",
+  "option.modmenu.hide_mod_credits": "Mod Készítők",
+  "option.modmenu.hide_mod_credits.true": "Elrejtve",
+  "option.modmenu.hide_mod_credits.false": "Megjelenítve",
+  "option.modmenu.hide_mod_license": "Mod Licenc",
+  "option.modmenu.hide_mod_license.true": "Elrejtve",
+  "option.modmenu.hide_mod_license.false": "Megjelenítve",
+  "option.modmenu.count_children": "Almodulok",
+  "option.modmenu.count_children.true": "Számolva",
+  "option.modmenu.count_children.false": "Nincs számolva",
+  "option.modmenu.count_libraries": "Könyvtárak",
+  "option.modmenu.count_libraries.true": "Számolva",
+  "option.modmenu.count_libraries.false": "Nincs számolva",
+  "option.modmenu.count_hidden_mods": "Rejtett Modok",
+  "option.modmenu.count_hidden_mods.true": "Számolva",
+  "option.modmenu.count_hidden_mods.false": "Nincs számolva",
+  "option.modmenu.mod_count_location": "Mod Számláló",
+  "option.modmenu.mod_count_location.title_screen": "Főképernyő Sarok",
+  "option.modmenu.mod_count_location.mods_button": "Modok Gomb",
+  "option.modmenu.mod_count_location.title_screen_and_mods_button": "Mindkettő",
+  "option.modmenu.mod_count_location.none": "Egyik sem",
+  "option.modmenu.easter_eggs": "Easter Egg-ek",
+  "option.modmenu.easter_eggs.true": "Engedélyezve",
+  "option.modmenu.easter_eggs.false": "Letiltva",
+  "option.modmenu.mods_button_style": "Modok Gomb",
+  "option.modmenu.mods_button_style.classic": "Realms alatt",
+  "option.modmenu.mods_button_style.replace_realms": "Realms helyett",
+  "option.modmenu.mods_button_style.shrink": "Mellé helyezve",
+  "option.modmenu.mods_button_style.icon": "Ikon",
+  "option.modmenu.random_java_colors": "Java Szín",
+  "option.modmenu.random_java_colors.true": "Gyártó szerint",
+  "option.modmenu.random_java_colors.false": "Mindig piros",
+  "option.modmenu.translate_names": "Nevek",
+  "option.modmenu.translate_names.true": "Lokalizált",
+  "option.modmenu.translate_names.false": "Nem lokalizált",
+  "option.modmenu.translate_descriptions": "Leírások",
+  "option.modmenu.translate_descriptions.true": "Lokalizált",
+  "option.modmenu.translate_descriptions.false": "Nem lokalizált",
+  "option.modmenu.update_checker": "Frissítésellenőrző",
+  "option.modmenu.update_checker.true": "Engedélyezve",
+  "option.modmenu.update_checker.false": "Letiltva",
+  "option.modmenu.button_update_badge": "Frissítés Jelző",
+  "option.modmenu.button_update_badge.true": "Megjelenítve",
+  "option.modmenu.button_update_badge.false": "Elrejtve"
 }
